Custom Element Usage

--- a/codbex-sample-vue-tailwind/index.html
+++ b/codbex-sample-vue-tailwind/index.html
@@ -83,6 +83,11 @@
                 <pre>{{ formData }}</pre>
             </div>
 
+            <!-- Custom Element Sample -->
+            <div class="mb-4">
+                <person-details></person-details>
+            </div>
+
             <!-- Table for Remote Data -->
             <div class="mt-10">
                 <h2 class="text-xl font-bold mb-4">Remote Data</h2>
