--- a/codbex-sample-vue-tailwind/index.html
+++ b/codbex-sample-vue-tailwind/index.html
@@ -71,10 +71,18 @@
                     </select>
                 </div>
 
+                <!-- Language Switcher -->
+                <select v-model="locale" @change="changeLocale">
+                    <option value="en">English</option>
+                    <option value="fr">Français</option>
+                </select>
+
+                <h1 class="text-1xl font-extrabold dark:text-blue">{{ $t('welcome') }}</h1>
+
                 <!-- Submit Button -->
                 <button type="submit"
                     class="w-full bg-blue-600 text-white font-bold py-2 px-4 rounded-lg shadow-lg hover:bg-blue-700">
-                    Submit
+                    {{ $t('submit') }}
                 </button>
             </form>
 
@@ -109,8 +117,10 @@
                 </table>
             </div>
         </div>
-
+        <!-- Import Vue -->
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+        <!-- Import Vue I18n -->
+        <script src="https://unpkg.com/vue-i18n@9"></script>
         <!-- Import JavaScript file as ES6 module -->
         <script type="module" src="app.js"></script>
     </body>
