--- a/codbex-sample-vue-tailwind/index.html
+++ b/codbex-sample-vue-tailwind/index.html
@@ -77,7 +77,7 @@
                     <option value="fr">Français</option>
                 </select>
 
-                <h1 class="text-1xl font-extrabold dark:text-blue">{{ $t('welcome') }}</h1>
+                <h2 class="text-2xl font-extrabold dark:text-blue">{{ $t('welcome') }}</h2>
 
                 <!-- Submit Button -->
                 <button type="submit"
@@ -95,6 +95,9 @@
             <div class="mb-4">
                 <person-details></person-details>
             </div>
+
+            <!-- Custom Component Sample -->
+            Hello <my-component></my-component> from a Custom Component
 
             <!-- Table for Remote Data -->
             <div class="mt-10">
@@ -121,6 +124,8 @@
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
         <!-- Import Vue I18n -->
         <script src="https://unpkg.com/vue-i18n@9"></script>
+        <!-- Import Vue SFC Loader -->
+        <script src="https://cdn.jsdelivr.net/npm/vue3-sfc-loader"></script>
         <!-- Import JavaScript file as ES6 module -->
         <script type="module" src="app.js"></script>
     </body>
