--- a/codbex-sample-vue-tailwind/sample-textbox-vue.html
+++ b/codbex-sample-vue-tailwind/sample-textbox-vue.html
@@ -15,12 +15,7 @@
 
             <form @submit.prevent="submitForm">
                 <!-- Text Input -->
-                <div class="mb-4">
-                    <label class="block text-sm font-medium text-gray-700 mb-2">Name</label>
-                    <input type="text" v-model="formData.name"
-                        class="w-full border-gray-300 rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500 p-2">
-                    <styled-textbox></styled-textbox>
-                </div>
+                <styled-textbox label="Name" v-model="formData.name"></styled-textbox>
 
                 <!-- Submit Button -->
                 <button type="submit"
